ui_test/parser/fail/example.err
error: Expected `let`, `&`, `*`, `-`, `!`, `...`, `..=`, `..`, lifetime, `loop`, `while`, `for`, {, `<`, number, (, [, `match`, `if`, `break`, `continue`, `return`, `|`, `site`, `super`, `mod`, `extern`, or identifier
  ┌─ $DIR/example.camp:3:1
  │
3 │ }
  │ ^

